<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">

	<TableLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<!-- 软件标题 -->
		<TextView
				android:layout_width="match_parent"
				android:layout_height="64dp"
				android:textSize="@android:dimen/app_icon_size"
				android:text="@string/app_name"
				tools:ignore="MissingConstraints"/>
		<!-- 软件简介 -->
		<TextView
				android:layout_width="match_parent"
				android:layout_height="130dp"
				android:textSize="24sp"
				android:text="@string/main_value"
				tools:ignore="MissingConstraints"/>
		<!-- 应用名称条目 -->
		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				tools:ignore="MissingConstraints">

			<EditText
					android:layout_width="256dp"
					android:layout_height="@android:dimen/app_icon_size"
					tools:ignore="MissingConstraints"
					android:importantForAutofill="no"
					android:inputType="text"
					android:id="@+id/item_name"
					android:hint="@string/item_name"
					android:layout_centerHorizontal="true"
					/>
		</RelativeLayout>
		<!-- 用户名/邮箱条目 -->
		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				tools:ignore="MissingConstraints">

			<EditText
					android:layout_width="256dp"
					android:layout_height="@android:dimen/app_icon_size"
					tools:ignore="MissingConstraints"
					android:importantForAutofill="no"
					android:inputType="text"
					android:id="@+id/item_user_name"
					android:hint="@string/item_user_name"
					android:layout_centerHorizontal="true"
					/>
		</RelativeLayout>
		<!-- 密码条目 -->
		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				tools:ignore="MissingConstraints">

			<EditText
					android:layout_width="256dp"
					android:layout_height="@android:dimen/app_icon_size"
					tools:ignore="MissingConstraints"
					android:importantForAutofill="no"
					android:inputType="textPassword"
					android:id="@+id/item_user_pwd"
					android:hint="@string/item_user_pwd"
					android:layout_centerHorizontal="true"
					/>
		</RelativeLayout>
		<!-- 按钮操作区 -->
		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				tools:ignore="MissingConstraints">

			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					tools:layout_editor_absoluteY="386dp"
					android:layout_centerHorizontal="true"
					tools:ignore="MissingConstraints,UselessParent">
				<!-- 提交按钮 -->
				<Button
						android:layout_width="64dp"
						android:layout_height="48dp"
						android:text="@string/button_submit"
						android:id="@+id/button_submit"
						tools:ignore="ButtonStyle,MissingConstraints"/>
				<!-- 查询按钮 -->
				<Button
						android:layout_width="wrap_content"
						android:layout_height="48dp"
						android:id="@+id/button_find"
						android:text="@string/button_find"
						tools:ignore="ButtonStyle"/>
				<Button
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/biometric_switch"
						android:text="@string/main_biometric_switch"
						android:visibility="gone"
						tools:ignore="ButtonStyle"/>
			</LinearLayout>
		</RelativeLayout>
		<!-- 背景图片 -->
		<ImageView
				android:src="@drawable/bg"
				android:layout_height="345dp"
				android:alpha="0.5"
				android:contentDescription="@string/app_name"/>
	</TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>