<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		tools:context=".LoginActivity">


	<EditText
			android:id="@+id/password"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="24dp"
			android:layout_marginEnd="24dp"

			android:hint="@string/prompt_password"
			android:imeActionLabel="@string/action_sign_in_short"
			android:imeOptions="actionDone"
			android:inputType="textPassword"
			android:selectAllOnFocus="true"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginTop="125dp"
			app:layout_constraintTop_toTopOf="@+id/textView"
			android:importantForAutofill="no">
		<requestFocus/>
	</EditText>

	<Button
			android:id="@+id/login"
			android:enabled="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginStart="48dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="48dp"
			android:layout_marginBottom="64dp"
			android:text="@string/action_sign_in"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/password"
			app:layout_constraintVertical_bias="0.2"
			/>


	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/action_sign_in_short_biometric"
			android:id="@+id/biometric_login"
			android:visibility="invisible"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/login"
			android:layout_marginTop="8dp"/>

	<ImageView
			android:src="@drawable/lock"
			android:layout_height="300dp"
			android:layout_width="match_parent"
			android:alpha="0.5"
			android:contentDescription="@string/app_name"
			app:layout_constraintTop_toBottomOf="@+id/login"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginTop="100dp"/>

	<TextView
			android:text="@string/title_activity_login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/textView"
			android:textSize="64sp"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="16dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="24dp"
			android:layout_marginStart="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>