<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	<TableLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:ignore="MissingConstraints">

		<RelativeLayout
				android:layout_height="wrap_content"
				tools:ignore="UselessParent">

			<EditText
					android:layout_width="256dp"
					android:layout_height="128dp"
					android:hint="@string/import_main"
					android:id="@+id/import_edit_main"
					android:inputType="text"
					android:importantForAutofill="no"
					android:layout_centerHorizontal="true"/>
		</RelativeLayout>

		<RelativeLayout
				android:layout_height="wrap_content"
				tools:ignore="UselessParent">

			<EditText
					android:layout_width="256dp"
					android:layout_height="@android:dimen/app_icon_size"
					android:hint="@string/export_key"
					android:id="@+id/import_edit_key"
					android:inputType="text"
					android:importantForAutofill="no"
					android:layout_centerHorizontal="true"/>
		</RelativeLayout>

		<RelativeLayout
				android:layout_height="wrap_content"
				tools:ignore="UselessParent">

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="16sp"
					android:text="@string/import_key_massage"
					android:layout_centerHorizontal="true"/>
		</RelativeLayout>
	</TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>